system/stackgres/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stackgres
  namespace: stackgres
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway
  hostnames:
    - stackgres.domain.example.com
  rules:
    - backendRefs:
        - kind: Service
          name: stackgres-restapi
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
